<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_easycat</name>
  <version>1.0.0</version>
  <description> Package for EasyCAT control in ROS2+ethercat</description>
  <maintainer email="fuminori.sugawara@gmail.com">Fuminori Sugawara</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_cia402_drive</exec_depend>
  <exec_depend>custom_position_controller</exec_depend>
  <exec_depend>custom_velocity_controller</exec_depend>
  <exec_depend>custom_effort_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
